Add rtlsdr to linker inputs. Open handle to rtl-sdr device in main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.0.0)
 project(rtl-sdr-playground C)
 
 add_executable(rtl-sdr-playground main.c)
+
+target_link_libraries(rtl-sdr-playground rtlsdr pthread)
