Add plot.c to source files. Add math lib to linker inputs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(rtl-sdr-playground C)
 
-add_executable(rtl-sdr-playground main.c)
+add_executable(rtl-sdr-playground main.c plot.c)
 
-target_link_libraries(rtl-sdr-playground rtlsdr pthread)
+target_link_libraries(rtl-sdr-playground rtlsdr pthread m)
