Encapsulate data processing functions in a separate source file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(rtl-sdr-playground C)
 
 add_compile_options(-Wall -Wextra -pedantic -Werror -Werror=vla)
 
-add_executable(rtl-sdr-playground src/main.c src/plot.c src/control.c src/fft.c src/server.c)
+add_executable(rtl-sdr-playground src/main.c src/plot.c src/control.c src/fft.c src/server.c src/proc.c)
 
 target_link_libraries(rtl-sdr-playground rtlsdr fftw3 pthread m)
